--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.9",
     "cors": "^2.8.5",
+    "jwt-decode": "^4.0.0",
+    "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
